--- a/game-of-life.html
+++ b/game-of-life.html
@@ -150,7 +150,7 @@
 <div class="grid-card-container">
     <div class="grid-individual-card card-background-green">
         <div class="header-basic-pokemon">Cellular Automaton</div>
-        <div class="header-pokemon-name">John Conway's Game of Life</div>
+        <div class="header-pokemon-name">Game of Life</div>
         <div class="header-hp">0 HP</div>
         <div class="header-type-icon">⚙</div>
         <div class="image-holder">
