--- a/game-of-life.html
+++ b/game-of-life.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-v1.css">
     <style type="text/css">
         .card-background-green {
             background: linear-gradient(to bottom right,
@@ -32,7 +32,7 @@
             font-size: 10px;
             border: none;
             border-radius: 4px;
-            background: #8b4513; /* sesert brown */
+            background: #8b4513; /* desert brown */
             color: white;
             cursor: pointer;
         }
