--- a/the-suitespot.html
+++ b/the-suitespot.html
@@ -1,48 +1,58 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="style-v1.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-</html>
 <body>
-<div class="grid-card-container">
-    <div class="grid-individual-card card-background-blue">
-        <div class="header-basic-pokemon">Vacation Rental</div>
-        <div class="header-pokemon-name">The SuiteSpot</div>
-        <div class="header-hp" style="color:black">$242/night&nbsp;</div>
-        <div class="header-type-icon">☻</div>
-        <div class="image-holder"><img
-                src="https://images.arrivedhomes.com/properties/508/da31c3e672a0c56cf3a5f04e6a652084.jpg?tr=dpr-auto,pr-true,di-logo_icon_CwvvbRzw9.svg,c-maintain_ratio,w-1920"
-                alt="Pikachu"></div>
-        <div class="description-below-image-empty"><!-- empty cell to position description correctly --></div>
-        <div class="description-below-image"><span class="description-below-image-background">10 guests・4 bedrooms・7 beds・3 baths</span>
-        </div>
-        <div class="description-below-image-empty"><!-- empty cell to position description correctly --></div>
-        <div class="attack-cost">☻</div>
-        <div class="attack-description"><span class="attack-name">Billiards</span> Enjoy a nice game of billiards with
-            your friends.
-        </div>
-        <div class="attack-damage"></div>
-        <div class="attack-cost">☻ ☻</div>
-        <div class="attack-description"><span class="attack-name">Swimming Pool</span> Soak in a pool while absorbing
-            the warm sun.
-        </div>
-        <div class="attack-damage"></div>
-        <!-- <div class="weakness wrr-header">weakness</div>
-        <div class="resistance wrr-header">resistance</div>
-        <div class="retreat wrr-header">retreat cost</div>
-        <div class="weakness wrr-cost">☻</div>
-        <div class="resistance wrr-cost"></div>
-        <div class="retreat wrr-cost">☻</div> -->
-        <div class="description-above-copyright">
-            <ul>
-                <li class="description-above-copyright-border">This enchanting home promises an unforgettable stay with
-                    its impeccable design, amazing amenities, and convenient proximity to the city's bustling nightlife.
-                    An art lover's dream with custom murals to match the desert locale, full of thoughtful and fun
-                    activities to ensure you and your party are never bored but always relaxed!
-                </li>
-            </ul>
-        </div>
-        <div class="copyright"><strong>Arrived</strong> ©2023<strong> 🏠 #353</strong></div>
+<div class="card-container card-background-blue">
+    <!-- Header Row -->
+    <div class="card-header">
+        <div class="card-type">Vacation Rental</div>
+    </div>
+
+    <!-- Name and Price Row -->
+    <div class="card-name-and-hp">
+        <div class="card-name">The SuiteSpot</div>
+        <div class="card-hp">$242/night ☻</div>
+    </div>
+
+    <!-- Image Row -->
+    <div class="card-image">
+        <img src="https://images.arrivedhomes.com/properties/508/da31c3e672a0c56cf3a5f04e6a652084.jpg?tr=dpr-auto,pr-true,di-logo_icon_CwvvbRzw9.svg,c-maintain_ratio,w-1920"
+             alt="Vacation Rental Image">
+    </div>
+
+    <!-- Features Text Row -->
+    <div class="card-flavor">
+        <span>10 guests・4 bedrooms・7 beds・3 baths</span>
+    </div>
+
+    <!-- Amenities Section -->
+    <div class="card-attack">
+        <div class="attack-name">Billiards</div>
+        <div class="attack-description">Enjoy a nice game of billiards with your friends.</div>
+        <div class="attack-damage">☻</div>
+    </div>
+
+    <div class="card-attack">
+        <div class="attack-name">Swimming Pool</div>
+        <div class="attack-description">Soak in a pool while absorbing the warm sun.</div>
+        <div class="attack-damage">☻ ☻</div>
+    </div>
+
+    <br/>
+
+    <!-- Details Row -->
+    <div class="card-description">
+        This enchanting home promises an unforgettable stay with its impeccable design, amazing amenities, and
+        convenient proximity to the city's bustling nightlife. An art lover's dream with custom murals to match the
+        desert locale, full of thoughtful and fun activities to ensure you and your party are never bored but always
+        relaxed!
+    </div>
+
+    <!-- Footer Row -->
+    <div class="card-footer">
+        <span><strong>Arrived</strong> ©2023 <strong>🏠 #353</strong></span>
     </div>
 </div>
 </body>
