--- a/old/mandelbeast.html
+++ b/old/mandelbeast.html
@@ -1,11 +1,9 @@
 <html>
 <head>
-    <link rel="stylesheet" href="style-v1.css">
+    <link rel="stylesheet" href="style.css">
     <style type="text/css">
         .card-background-green {
-            background: linear-gradient(to bottom right,
-            violet, indigo, blue, green, yellow, orange, red
-            );
+            background: linear-gradient(to bottom right, violet, indigo, blue, green, yellow, orange, red);
         }
         #pokemon-canvas {
             width: 300px;
