--- a/blackhole.html
+++ b/blackhole.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         body {
-            background-color: black;
+            background-color: gray;
             margin: 0;
             overflow: hidden;
             font-family: Arial, sans-serif;
